# Example-App

./: .buildinfo  .dockerignore  .flake8  api_test.ipynb  create_ACI_deployment.py  create_command_job - old.py  create_command_job.py  create_command_job_consume_data_asset.py  create_endpoint - old.py  create_endpoint.py  create_pipeline - old.py  create_pipeline.py  dockerfile  endpoint_test.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docker_build_and_push.yml  flake8.yml  sphinx.yml
Notebooks/: Command_Jobs.ipynb  Pipelines.ipynb  Review_Session_1.ipynb  Review_Session_2_Scoring.ipynb  Review_Session_2_deployment.ipynb  api_test.ipynb  sample-request.json  sample-request4.json
_build/doctrees/: index.doctree
_build/html/: objects.inv  searchindex.js
_sources/: index.rst.txt
docs/: conf.py  genindex.html  index.html  index.rst  requirements.txt  search.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  index.html  py-modindex.html  searchindex.js
models/download/: model.keras
models/mnist_model/: keras_metadata.pb  saved_model.pb
models/mnist_model/variables/: variables.data-00000-of-00001  variables.index
src/: data.py  model.py  predict.py  train.py
src/number_predictor/: app.py  evaluate.py  load_data.py  model.py  predict.py  register.py  scoring.py  train.py
src/number_predictor/models/mnist_model/: keras_metadata.pb  saved_model.pb
src/number_predictor/models/mnist_model/variables/: variables.data-00000-of-00001  (+1 more)
